Adjusting some application functionalities. Changed the login background image and added the locale dropdown. Defined the application name as FinDetector. Removed some unused files. Updated the pt_BR and en internationalization files.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Finefoods Ant Design Admin Panel - refine</title>
+  <title>FinDetector</title>
 </head>
 
 <body>
